--- a/app/src/main/assets/about.html
+++ b/app/src/main/assets/about.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html lang="sv">
-<body>
-<h1>Detta är min fantastiska html-sida!</h1>
+h1 {text-align: center;}
+<body style="background-color:DarkSeaGreen;">
+<br>
+<br>
+<h1 style="color:Teal;">Detta är min fantastiska html-sida!</h1>
 <p>
     Här finns det mycket intressant att läsa.
 </p>
